@@ -15,6 +15,7 @@ Bug fixes:
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
 Cleanup:
+- [#5595] Rename tx_seminars_Model_Organizer to Tx_Seminars_Model_Organizer
 - [#5629] Use MathUtility instead t3lib_utility_Math
 - [#5594] Rename tx_seminars_Model_Lodging to Tx_Seminars_Model_Lodging
 - [#5593] Rename tx_seminars_Model_FrontEndUser to Tx_Seminars_Model_FrontEndUser
